Fix elem check